results/SVCOMP/specgen/log-exceptions1-2024_02_25_15_49_29.txt
/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/exceptions1
 * The benchmark was taken from the repo: 24 January 2018
 */
class A extends Throwable {}

class B extends A {}

class C extends B {}

class D extends C {}

class Main {
  //@ requires true;
  //@ ensures \result == null;
  public static void main(String[] arg) {
    try {
      D d = new D();
      C c = new C();
      B b = new B();
      A a = new A();
      A e = a;
      throw e;
    } catch (D exc) {
      assert false;
    } catch (C exc) {
      assert false;
    } catch (B exc) {
      assert false;
    } catch (A exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions1.java:19: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == null;
               ^
1 error

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/exceptions1
 * The benchmark was taken from the repo: 24 January 2018
 */
class A extends Throwable {}

class B extends A {}

class C extends B {}

class D extends C {}

class Main {
  //@ requires true;
  public static void main(String[] arg) {
    try {
      D d = new D();
      C c = new C();
      B b = new B();
      A a = new A();
      A e = a;
      throw e;
    } catch (D exc) {
      assert false;
    } catch (C exc) {
      assert false;
    } catch (B exc) {
      assert false;
    } catch (A exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions1.java:34: verify: The prover cannot establish an assertion (Assert) in method main
      assert false;
      ^
1 verification failure

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/exceptions1
 * The benchmark was taken from the repo: 24 January 2018
 */
class A extends Throwable {}

class B extends A {}

class C extends B {}

class D extends C {}

class Main {
  //@ requires true;
  public static void main(String[] arg) {
    try {
      D d = new D();
      C c = new C();
      B b = new B();
      A a = new A();
      A e = a;
      throw e;
    } catch (D exc) {
      assert false;
    } catch (C exc) {
      assert false;
    } catch (B exc) {
      assert false;
    } catch (A exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions1.java:34: verify: The prover cannot establish an assertion (Assert) in method main
      assert false;
      ^
1 verification failure

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/exceptions1
 * The benchmark was taken from the repo: 24 January 2018
 */
class A extends Throwable {}

class B extends A {}

class C extends B {}

class D extends C {}

class Main {
  //@ requires true;
  public static void main(String[] arg) {
    try {
      D d = new D();
      C c = new C();
      B b = new B();
      A a = new A();
      A e = a;
      throw e;
    } catch (D exc) {
      assert false;
    } catch (C exc) {
      assert false;
    } catch (B exc) {
      assert false;
    } catch (A exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions1.java:34: verify: The prover cannot establish an assertion (Assert) in method main
      assert false;
      ^
1 verification failure

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/exceptions1
 * The benchmark was taken from the repo: 24 January 2018
 */
class A extends Throwable {}

class B extends A {}

class C extends B {}

class D extends C {}

class Main {
  //@ requires true;
  public static void main(String[] arg) {
    try {
      D d = new D();
      C c = new C();
      B b = new B();
      A a = new A();
      A e = a;
      throw e;
    } catch (D exc) {
      assert false;
    } catch (C exc) {
      assert false;
    } catch (B exc) {
      assert false;
    } catch (A exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions1.java:34: verify: The prover cannot establish an assertion (Assert) in method main
      assert false;
      ^
1 verification failure

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/exceptions1
 * The benchmark was taken from the repo: 24 January 2018
 */
class A extends Throwable {}

class B extends A {}

class C extends B {}

class D extends C {}

class Main {
  //@ requires true;
  public static void main(String[] arg) {
    try {
      D d = new D();
      C c = new C();
      B b = new B();
      A a = new A();
      A e = a;
      throw e;
    } catch (D exc) {
      assert false;
    } catch (C exc) {
      assert false;
    } catch (B exc) {
      assert false;
    } catch (A exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions1.java:34: verify: The prover cannot establish an assertion (Assert) in method main
      assert false;
      ^
1 verification failure

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/exceptions1
 * The benchmark was taken from the repo: 24 January 2018
 */
class A extends Throwable {}

class B extends A {}

class C extends B {}

class D extends C {}

class Main {
  //@ requires true;
  public static void main(String[] arg) {
    try {
      D d = new D();
      C c = new C();
      B b = new B();
      A a = new A();
      A e = a;
      throw e;
    } catch (D exc) {
      assert false;
    } catch (C exc) {
      assert false;
    } catch (B exc) {
      assert false;
    } catch (A exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions1.java:34: verify: The prover cannot establish an assertion (Assert) in method main
      assert false;
      ^
1 verification failure

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/exceptions1
 * The benchmark was taken from the repo: 24 January 2018
 */
class A extends Throwable {}

class B extends A {}

class C extends B {}

class D extends C {}

class Main {
  //@ requires true;
  public static void main(String[] arg) {
    try {
      D d = new D();
      C c = new C();
      B b = new B();
      A a = new A();
      A e = a;
      throw e;
    } catch (D exc) {
      assert false;
    } catch (C exc) {
      assert false;
    } catch (B exc) {
      assert false;
    } catch (A exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions1.java:34: verify: The prover cannot establish an assertion (Assert) in method main
      assert false;
      ^
1 verification failure

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/exceptions1
 * The benchmark was taken from the repo: 24 January 2018
 */
class A extends Throwable {}

class B extends A {}

class C extends B {}

class D extends C {}

class Main {
  //@ requires true;
  public static void main(String[] arg) {
    try {
      D d = new D();
      C c = new C();
      B b = new B();
      A a = new A();
      A e = a;
      throw e;
    } catch (D exc) {
      assert false;
    } catch (C exc) {
      assert false;
    } catch (B exc) {
      assert false;
    } catch (A exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions1.java:34: verify: The prover cannot establish an assertion (Assert) in method main
      assert false;
      ^
1 verification failure

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/exceptions1
 * The benchmark was taken from the repo: 24 January 2018
 */
class A extends Throwable {}

class B extends A {}

class C extends B {}

class D extends C {}

class Main {
  //@ requires true;
  public static void main(String[] arg) {
    try {
      D d = new D();
      C c = new C();
      B b = new B();
      A a = new A();
      A e = a;
      throw e;
    } catch (D exc) {
      assert false;
    } catch (C exc) {
      assert false;
    } catch (B exc) {
      assert false;
    } catch (A exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions1.java:34: verify: The prover cannot establish an assertion (Assert) in method main
      assert false;
      ^
1 verification failure

